--- a/KontaktBok/KontaktBok.csproj
+++ b/KontaktBok/KontaktBok.csproj
@@ -35,8 +35,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,6 +66,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="IMainView.cs" />
+    <Compile Include="SelectionManager.cs" />
+    <Compile Include="ViewControls Layer\AddUserControl.xaml.cs">
+      <DependentUpon>AddUserControl.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -63,12 +79,23 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Data Model\ContactDBDataModel.cs" />
+    <Compile Include="Data Model\ContactDetails.cs" />
+    <Compile Include="Data Model\ContactName.cs" />
+    <Compile Include="DataLayer2\ContactBookDBDModel.cs" />
+    <Compile Include="DataLayer2\Contacts.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ViewControls Layer\AddUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model Layer\Model.cs" />
+    <Compile Include="Presenter Layer\Presenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -86,6 +113,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -94,6 +122,35 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\Contact Add-WF.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\Black_S32_P2_BBlue\Thin_Accept.png" />
+    <Resource Include="Kontaktbok Ikoner\Black_S32_P2_BBlue\Thin_Close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\Black_S24_P0_BT\Thin_Accept.png" />
+    <Resource Include="Kontaktbok Ikoner\Black_S24_P0_BT\Thin_Close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\Black_S48_P11_Gray\Thin_Accept.png" />
+    <Resource Include="Kontaktbok Ikoner\Black_S48_P11_Gray\Thin_Close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\Black_S48_P11_Blue\48_EditContact_B.png" />
+    <Resource Include="Kontaktbok Ikoner\Black_S48_P11_Blue\48_Thin_Accept_Blue.png" />
+    <Resource Include="Kontaktbok Ikoner\Black_S48_P11_Blue\48_Thin_Close_B.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\Search-WF.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\48_EditContact_B.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Kontaktbok Ikoner\Contact Edit-WF.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
